# libcint

./: .gitignore  CIntCmake.cmake  CIntConfig.cmake  CMakeLists.txt  Makefile  build.sh  cint_basisset.c  cint_config.h  cint_simint.c  erd_integral.c  oed_integral.c  test_cint_opterd.c  test_cint_simint.c
share/cmake/CInt/: CIntConfig.cmake  CIntTargets-noconfig.cmake  CIntTargets.cmake
